--- a/MultithreadedSnake/MultithreadedSnake.vcxproj
+++ b/MultithreadedSnake/MultithreadedSnake.vcxproj
@@ -133,16 +133,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="board.c" />
+    <ClCompile Include="cell.c" />
     <ClCompile Include="fruit.c" />
     <ClCompile Include="game.c" />
     <ClCompile Include="multithreadedsnake.c" />
-    <ClCompile Include="snake.c" />
+    <ClCompile Include="queue.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="board.h" />
+    <ClInclude Include="boolean.h" />
+    <ClInclude Include="cell.h" />
+    <ClInclude Include="direction.h" />
     <ClInclude Include="fruit.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="multithreadedsnake.h" />
-    <ClInclude Include="snake.h" />
+    <ClInclude Include="queue.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
