Deleting queue.h and queue.c once snake.c and snake.h are implemented into the game_state struct. Also fixed some documentation.

--- a/MultithreadedSnake/MultithreadedSnake.vcxproj
+++ b/MultithreadedSnake/MultithreadedSnake.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="game.c" />
     <ClCompile Include="multithreadedsnake.c" />
     <ClCompile Include="queue.c" />
+    <ClCompile Include="snake.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="board.h" />
@@ -149,6 +150,10 @@
     <ClInclude Include="game.h" />
     <ClInclude Include="multithreadedsnake.h" />
     <ClInclude Include="queue.h" />
+    <ClInclude Include="snake.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="graphics\franklin_gothic_heavy_font.pcx" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
