--- a/MultithreadedSnake/MultithreadedSnake.vcxproj.filters
+++ b/MultithreadedSnake/MultithreadedSnake.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="board.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="snake.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="multithreadedsnake.h">
@@ -59,5 +62,11 @@
     <ClInclude Include="board.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="snake.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="graphics\franklin_gothic_heavy_font.pcx" />
   </ItemGroup>
 </Project>
