--- a/MultithreadedSnake/MultithreadedSnake.vcxproj.filters
+++ b/MultithreadedSnake/MultithreadedSnake.vcxproj.filters
@@ -15,25 +15,25 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="multithreadedsnake.c">
+    <ClCompile Include="multithreadedsnake.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="game.c">
+    <ClCompile Include="game.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="fruit.c">
+    <ClCompile Include="cell.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="queue.c">
+    <ClCompile Include="node.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="cell.c">
+    <ClCompile Include="queue.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="board.c">
+    <ClCompile Include="board.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="snake.c">
+    <ClCompile Include="snake.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -53,9 +53,6 @@
     <ClInclude Include="cell.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="boolean.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
     <ClInclude Include="direction.h">
       <Filter>Source Files</Filter>
     </ClInclude>
@@ -63,6 +60,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="snake.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="node.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
